@@ -122,7 +122,8 @@ pocc_options_malloc ()
   ret->punroll = 0;
   ret->punroll_and_jam = 0;
   ret->punroll_size = 4;
-
+  ret->nb_registers = 32;
+  
   // Vectorization options.
   ret->vectorizer = 0;
   ret->vectorizer_mark_par_loops = 0;
